# flexiagent

./: .gitignore  .tool-versions  LICENSE  Makefile  Quickstart.md  README.md  pyproject.toml
.github/workflows/: publish.yml  run-unittest.yml
benchmark/: README.md  pred.sql  requirements.txt  run_text2sql_bird_benchmark.sh  run_text2sql_bird_gensql.sh  text2sql_benchmark.py  text2sql_bird_benchmark.py  text2sql_result.txt  text2sql_spider_dev_benchmark.py  text2sql_spider_dev_result.txt
examples/: Makefile  README.md  main.py  requirements.txt
examples/docker/: Dockerfile  docker-compose.yaml
examples/gradio_chatbot/: __init__.py  simple_chatbot.py  text2sql_qa_chatbot.py  utils.py
flexiagent/: __init__.py  indexer.py
flexiagent/agents/: agent_db_recognition.py  agent_text2sql.py  agent_text2sql_qa.py  agent_text2sql_with_db_recog.py
flexiagent/builtin/agents/: agent_db_recognition.py  agent_text2sql.py  agent_text2sql_qa.py  agent_text2sql_with_db_recog.py
flexiagent/builtin/function/: http_call.py
flexiagent/database/: db_executor.py
flexiagent/llm/: config.py  engine_factory.py  llm.py  structured_schema.py
flexiagent/llm/engine/: engine_base.py  llama_cpp.py  openai.py
flexiagent/prompts/: __init__.py  prompt.py
flexiagent/task/: action_loader.py  base.py  condition.py  task_agent.py  task_node.py
flexisearch/: __init__.py  agent.py  config_keys.py  flexisearch.py  indexer.py  llm.py  main.py  prompt.py  searcher.py  task.py  text2sql_benchmark.py  text2sql_benchmark.txt
flexisearch/agents/: agent_context_qa.py  agent_db_recognition.py  agent_demo.py  agent_intent_recognition.py  agent_intent_recognizer.py  agent_output_parser.py  agent_response_based_text2sql.py  agent_response_with_context.py  agent_retriever.py  agent_text2sql.py  agent_text2sql_qa.py
flexisearch/database/: db_executor.py
flexisearch/llm/: config.py  engine_factory.py  histroy_tracker.py  llm.py  structured_schema.py
flexisearch/llm/engine/: engine_base.py  llama_cpp.py  openai.py
flexisearch/model/: data.py
flexisearch/prompts/: __init__.py
tests/: bird_utils.py  conftest.py  test_agent_task.py  test_builtin_function.py  test_custom_agent.py  test_searcher.py  test_simple_usage.py  test_text2sql.py  test_text2sql_benchmark.py  test_text2sql_unittest.py  utils.py
