[tool.poetry]
name = "flexisearch"
version = "0.1.0"
description = ""
authors = ["Hiram Deng <72371329+dzhsurf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlparse = "^0.5.1"
openai = "^1.43.0"
pydantic = "^2.9.0"
sqlalchemy = "^2.0.34"
llama-cpp-python = "^0.2.90"
huggingface-hub = "^0.24.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
